Change website title to "tree"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>My test page</title>
+    <title>Tree</title>
     <link href = "styles/style.css" rel = "stylesheet">
     <link rel="stylesheet" 
     href="https://fonts.googleapis.com/css2?family=DotGothic16">
